# kiosk

./: .gitignore  CMakeLists.txt  README.md  trello.css
flask/: app.py
flask/static/: index.html
inc/: app.h  remote.h  state.h  ticker.h  view.h
src/: app.cc  main.cc  remote.cc  view.cc
